# liquid-gel

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md
liquid-gel/: FETCH_HEAD  config
liquid-gel/refs/heads/: main
nix/: package-x11.nix  package.nix
src/: blur.cpp  metadata.json
src/kcm/: CMakeLists.txt  about.html  blur_config.cpp
